Added group chat functionality to seer; Modified create scripts for meta

--- a/yasmpseer/package.json
+++ b/yasmpseer/package.json
@@ -1,1 +1,28 @@
-{"name":"yasmpseer","version":"1.0.0","description":"","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node server.js 5001","server":"nodemon server.js 5001","u1server":"nodemon server.js 5001","u2server":"nodemon server.js 5002","u3server":"nodemon server.js 5003","u4server":"nodemon server.js 5004","uconc":"concurrently \"npm run u1server\" \"npm run u2server\" \"npm run u3server\" \"npm run u4server\" \"npm run u5server\"","u5server":"nodemon server.js 5001"},"keywords":[],"author":"","license":"ISC","dependencies":{"cors":"^2.8.5","express":"^4.18.2","node-fetch":"^2.6.9","nodemon":"^2.0.21"},"devDependencies":{"concurrently":"^7.6.0"}}
+{
+    "name": "yasmpseer",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js 5001",
+        "server": "nodemon server.js 5001",
+        "u1server": "nodemon server.js 5001",
+        "u2server": "nodemon server.js 5002",
+        "u3server": "nodemon server.js 5003",
+        "u4server": "nodemon server.js 5004",
+        "uconc": "concurrently \"npm run u1server\" \"npm run u2server\" \"npm run u3server\" \"npm run u4server\""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "node-fetch": "^2.6.9",
+        "nodemon": "^2.0.21"
+    },
+    "devDependencies": {
+        "concurrently": "^7.6.0"
+    }
+}
