--- a/yasmpseer/package.json
+++ b/yasmpseer/package.json
@@ -1,32 +1,1 @@
-{
-    "name": "yasmpseer",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js 5001",
-        "server": "nodemon server.js 5001",
-        "totaljson": "json-server --watch ./Data/total_sequence.json --port 8000",
-        "u1server": "nodemon server.js 5001",
-        "u2server": "nodemon server.js 5002",
-        "u3server": "nodemon server.js 5003",
-        "u4server": "nodemon server.js 5004",
-        "uconc": "concurrently \"npm run totaljson\" \"npm run u1server\" \"npm run u2server\" \"npm run u3server\" \"npm run u4server\"",
-        "u1total": "concurrently \"npm run totaljson\" \"npm run u1server\""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "axios": "^1.3.5",
-        "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "json-server": "^0.17.3",
-        "node-fetch": "^2.6.9",
-        "nodemon": "^2.0.21"
-    },
-    "devDependencies": {
-        "concurrently": "^7.6.0"
-    }
-}
+{"name":"yasmpseer","version":"1.0.0","description":"","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node server.js 5001","server":"nodemon server.js 5001","totaljson":"json-server --watch ./Data/total_sequence.json --port 8000","u1server":"nodemon server.js 5001","u2server":"nodemon server.js 5002","u3server":"nodemon server.js 5003","u4server":"nodemon server.js 5004","uconc":"concurrently \"npm run totaljson\" \"npm run u1server\" \"npm run u2server\" \"npm run u3server\" \"npm run u4server\"","u1total":"concurrently \"npm run totaljson\" \"npm run u1server\""},"keywords":[],"author":"","license":"ISC","dependencies":{"axios":"^1.3.5","cors":"^2.8.5","express":"^4.18.2","json-server":"^0.17.3","node-fetch":"^2.6.9","nodemon":"^2.0.21"},"devDependencies":{"concurrently":"^7.6.0"}}
